--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -80,7 +80,7 @@ tasks:
     desc: Build the microservice artifact that can be uploaded to Cumulocity
     cmds:
       - chmod +x ./build/microservice.sh
-      - sudo bash -e ./build/microservice.sh pack --directory ./ --name {{.BINARY_NAME}} --tag "{{.VERSION_TAG}}"
+      - bash -e ./build/microservice.sh pack --directory ./ --name {{.BINARY_NAME}} --tag "{{.VERSION_TAG}}"
       - mkdir -p {{.RELEASE_DIR}}
       - mv -f {{.BINARY_NAME}}.zip {{.RELEASE_DIR}}/{{.BINARY_NAME}}-v{{.VERSION_TAG}}.zip
 
