--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@
 # Licensed under the MIT License. See https://go.microsoft.com/fwlink/?linkid=2090316 for license information.
 #-------------------------------------------------------------------------------------------------------------
 
-FROM golang:1.17
+FROM golang:1.18
 
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
@@ -34,28 +34,26 @@ RUN echo "Installing dependencies" \
     # Build Go tools w/module support
     && mkdir -p /tmp/gotools \
     && cd /tmp/gotools \
-    && GOPATH=/tmp/gotools GO111MODULE=on go get -v golang.org/x/tools/gopls@latest 2>&1 \
-    && GOPATH=/tmp/gotools GO111MODULE=on go get -v \
-        honnef.co/go/tools/...@latest \
-        golang.org/x/tools/cmd/gorename@latest \
-        golang.org/x/tools/cmd/goimports@latest \
-        golang.org/x/tools/cmd/guru@latest \
-        golang.org/x/lint/golint@latest \
-        github.com/mdempsky/gocode@latest \
-        github.com/cweill/gotests/...@latest \
-        github.com/haya14busa/goplay/cmd/goplay@latest \
-        github.com/sqs/goreturns@latest \
-        github.com/josharian/impl@latest \
-        github.com/davidrjenni/reftools/cmd/fillstruct@latest \
-        github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest  \
-        github.com/ramya-rao-a/go-outline@latest  \
-        github.com/acroca/go-symbols@latest  \
-        github.com/godoctor/godoctor@latest  \
-        github.com/rogpeppe/godef@latest  \
-        github.com/zmb3/gogetdoc@latest \
-        github.com/fatih/gomodifytags@latest  \
-        github.com/mgechev/revive@latest  \
-        github.com/go-delve/delve/cmd/dlv@latest 2>&1 \
+    && GOPATH=/tmp/gotools go install -v golang.org/x/tools/gopls@latest 2>&1 \
+    && GOPATH=/tmp/gotools go install -v honnef.co/go/tools/cmd/staticcheck@latest \
+    && GOPATH=/tmp/gotools go install -v golang.org/x/tools/cmd/gorename@latest \
+    && GOPATH=/tmp/gotools go install -v golang.org/x/tools/cmd/goimports@latest \
+    && GOPATH=/tmp/gotools go install -v golang.org/x/tools/cmd/guru@latest \
+    && GOPATH=/tmp/gotools go install -v golang.org/x/lint/golint@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/mdempsky/gocode@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/haya14busa/goplay/cmd/goplay@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/sqs/goreturns@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/josharian/impl@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/davidrjenni/reftools/cmd/fillstruct@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/ramya-rao-a/go-outline@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/acroca/go-symbols@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/godoctor/godoctor@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/rogpeppe/godef@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/zmb3/gogetdoc@latest \
+    && GOPATH=/tmp/gotools go install -v github.com/fatih/gomodifytags@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/mgechev/revive@latest  \
+    && GOPATH=/tmp/gotools go install -v github.com/go-delve/delve/cmd/dlv@latest 2>&1 \
     #
     # Install Go tools
     && mv /tmp/gotools/bin/* /usr/local/bin/ \
@@ -77,7 +75,7 @@ RUN echo "Installing dependencies" \
     # Install Docker CE cli
     && apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common lsb-release \
     && curl -fsSL https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]')/gpg | apt-key add - 2>/dev/null \
-    && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]') $(lsb_release -cs) stable" \
+    && add-apt-repository "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]') $(lsb_release -cs) stable" \
     && apt-get update \
     && apt-get install -y docker-ce-cli \
     #
@@ -102,8 +100,8 @@ USER $USERNAME
 RUN curl -sSfL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh | sh -s -- "" --unattended 2>&1
 
 USER root
-RUN sh -c "curl https://reubenmiller.jfrog.io/artifactory/api/security/keypair/public/repositories/c8y-debian | apt-key add -" \
-    && sh -c "echo 'deb https://reubenmiller.jfrog.io/artifactory/c8y-debian stable main' >> /etc/apt/sources.list" \
+RUN curl https://reubenmiller.github.io/go-c8y-cli-repo/debian/PUBLIC.KEY | gpg --dearmor | tee /usr/share/keyrings/go-c8y-cli-archive-keyring.gpg >/dev/null \
+    && sh -c "echo 'deb [signed-by=/usr/share/keyrings/go-c8y-cli-archive-keyring.gpg] http://reubenmiller.github.io/go-c8y-cli-repo/debian stable main' >> /etc/apt/sources.list" \
     #
     # task completions
     && curl https://raw.githubusercontent.com/sawadashota/go-task-completions/master/_task -o /usr/local/share/zsh/site-functions/_task \
@@ -121,6 +119,10 @@ RUN sh -c "curl https://reubenmiller.jfrog.io/artifactory/api/security/keypair/p
     #
     # Fix go permissions
     && chown -R ${USERNAME}:${USERNAME} /go \
+    #
+    # Add user to docker group
+    && groupadd docker \
+    && usermod -aG docker $USERNAME \
     #
     # Clean up
     && apt-get autoremove -y \
